--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.10.0",
     "react-router-dom": "^7.10.0",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
